[gd_scene load_steps=4 format=3 uid="uid://doe6iyimvqus6"]

[ext_resource type="Texture2D" uid="uid://b5wqsixkothn8" path="res://Assets/Sprites/HUD/Dialog/FacesetBox.png" id="1_1g0gv"]
[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_dacc2"]
[ext_resource type="Theme" uid="uid://dy7uyxmjxj7py" path="res://Resources/UI/inventory_ui.tres" id="3_tpuoe"]

[node name="InventorySlot" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dacc2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_1g0gv")

[node name="MenuButton" type="MenuButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "Equip"
popup/item_1/text = "Drop"
popup/item_1/id = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MenuButton/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="OnClickButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="StackLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.977
anchor_right = 1.0
anchor_bottom = 0.977
offset_left = -26.0
offset_top = -27.62
offset_right = -6.0
offset_bottom = -4.62
theme = ExtResource("3_tpuoe")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_tpuoe")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 2
